--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "private": true,
   "dependencies": {
-    "discord.js": "^11.5.1",
+    "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
+    "ffmpeg-binaries": "^3.2.2-3",
     "fs-extra": "^8.1.0",
     "opusscript": "^0.0.7",
     "voice-text": "^0.1.2"
